# dental-rad-cli

./: .gitignore  LICENSE  README.md  TODOS.md  pyproject.toml
docs/: caries-class-mapping.md  hour-5-gate.md  methodology-brief.md  overnight-briefing-2026-05-11.md  phi-scrub-recipe.md  pickles-training-kickoff.md  v0.5-caries-remediation.md
output/: 2026-05-12-lessons-learned-26hr-session.md  2026-05-12-night-session-summary.md
scripts/: _common.sh  audit_dev_held_out_leakage.py  benchmark_eval.py  dev_contact_sheet.py  diagnose_bone_above_cej.py  diagnose_worst_errors.py  dissect_907.py  dissect_severe_sites.py  download_caries_data.ps1  download_caries_data.sh  download_denpar.ps1  download_denpar.sh  dumb_baseline_floor.py  eval.sh  eval_caries.py  eval_cej_polyline.py  eval_keypoint_cej.py  karpathy_stratify.py  lock_held_out_split.py  prepare_datasets.ps1  prepare_datasets.sh  smoke_test_family_a.py  stratify_by_denpar_meta.py  stratify_dev_errors.py  sweep_landmark_rules.sh  train_all.sh  train_caries.ps1  train_caries.sh  train_cej_polyline.ps1  train_keypoint_apex.sh  train_keypoint_bone.sh  train_keypoint_cej.sh  train_segmentation_bone.sh  train_segmentation_tooth.sh  train_tooth_detect.sh  visualize_polyline_predictions.py
splits/: HELD_OUT_TOUCHES.md  README.md  denpar_dev.txt  denpar_held_out.txt
tests/: test_aap.py  test_caries_adapter.py  test_caries_inference.py  test_cli_args.py  test_denpar_adapter_bone.py  test_family_a.py  test_family_a_routing.py  test_jaw.py  test_note_draft.py  test_orchestrator_wiring.py  test_pattern.py  test_schema.py  (+2 more)
(+119 files in other folders)
